Home Page started
Hero section completed, as well as nav. Have cycling key word functioning, starting on general body information.

--- a/frontend/sass/_var.scss
+++ b/frontend/sass/_var.scss
@@ -3,6 +3,8 @@ $midgrey: #C3C3B7;
 $darkgrey: #4A4F4F;
 $green:  #D5E0A8;
 $orange: #F4794F;
+$white: #fff;
+$black: #000;
 
 $displayfont: "Cremona", sans-serif;
 $contentfont: "Assistant", sans-serif;
