--- a/frontend/sass/_mixins.scss
+++ b/frontend/sass/_mixins.scss
@@ -67,3 +67,14 @@
     cursor: pointer;
 }
 // END OF BUTTON MIXINS
+
+// BEGINNING OF FLEX MIXINS
+
+@mixin center-flex {
+    display: flex;
+    align-items: center;
+    align-content: center;
+    justify-content: center;
+}
+
+// END OF FLEX MIXINS
