--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -244,42 +244,6 @@ li {
   font-family: "Assistant", sans-serif;
   font-size: 1.5em;
   font-weight: 600;
-.footer {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-}
-.footer-upper {
-  background-image: url("/frontend/img/footer-img.png");
-  background-size: cover;
-  background-position: 0% 35%;
-  padding: 8em;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-}
-.footer-upper__cta {
-  color: #EFEFEB;
-  font-family: "Assistant", sans-serif;
-  font-weight: 600;
-  text-transform: uppercase;
-  font-size: 2.5em;
-  letter-spacing: 0.05em;
-  text-align: center;
-  padding-bottom: 1.5em;
-}
-.footer-upper__btn-container {
-  width: 100%;
-  display: flex;
-  justify-content: center;
-}
-.footer-upper__btn-container .sell-work-btn {
-  justify-self: center;
-  width: fit-content;
-  font-family: "Assistant", sans-serif;
-  font-size: 1.5em;
-  font-weight: 600;
   text-transform: uppercase;
   background-color: #F4794F;
   color: white;
@@ -385,6 +349,7 @@ li {
   font-family: "Assistant", sans-serif;
   font-size: 1.5em;
   font-weight: 600;
+  text-transform: uppercase;
   background-color: #F4794F;
   color: white;
   border: none;
@@ -393,29 +358,7 @@ li {
   cursor: pointer;
   color: #EFEFEB;
 }
-.footer-lower {
-  display: flex;
-  justify-content: space-between;
-  padding: 5em 8em;
-  background-color: #EFEFEB;
-  border-bottom: solid 1px #C3C3B7;
-}
-.footer-lower__left .footer-logo__display {
-  font-family: "Cremona", sans-serif;
-  font-size: 3.75em;
-  font-weight: 400;
-  font-size: 3em;
-  color: #4A4F4F;
-}
-.footer-lower__left .footer-logo__tag {
-  font-family: "Assistant", sans-serif;
-  font-size: 1.8em;
-  font-weight: 400;
-  font-weight: 300;
-  color: #4A4F4F;
-}
-.footer-lower__right {
-  text-align: right;
+.landing__hero .landing__intro-btn-alt {
   font-family: "Assistant", sans-serif;
   font-size: 1.5em;
   font-weight: 300;
@@ -468,6 +411,83 @@ li {
   font-weight: 400;
 }
 .landing__content-body {
+  font-family: "Assistant", sans-serif;
+  font-size: 1.5em;
+  font-weight: 300;
+  line-height: 1.6em;
+}
+
+.footer {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.footer-upper {
+  background-image: url("/frontend/img/footer-img.png");
+  background-size: cover;
+  background-position: 0% 35%;
+  padding: 8em;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.footer-upper__cta {
+  color: #EFEFEB;
+  font-family: "Assistant", sans-serif;
+  font-weight: 600;
+  text-transform: uppercase;
+  font-size: 2.5em;
+  letter-spacing: 0.05em;
+  text-align: center;
+  padding-bottom: 1.5em;
+}
+.footer-upper__btn-container {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+.footer-upper__btn-container .sell-work-btn {
+  justify-self: center;
+  width: fit-content;
+  font-family: "Assistant", sans-serif;
+  font-size: 1.5em;
+  font-weight: 600;
+  text-transform: uppercase;
+  background-color: #F4794F;
+  color: white;
+  border: none;
+  border-radius: none;
+  padding: 0.75em 2em;
+  cursor: pointer;
+}
+.footer-lower {
+  display: flex;
+  justify-content: space-between;
+  padding: 5em 8em;
+  background-color: #EFEFEB;
+  border-bottom: solid 1px #C3C3B7;
+}
+.footer-lower__left .footer-logo__display {
+  font-family: "Cremona", sans-serif;
+  font-size: 3.75em;
+  font-weight: 400;
+  font-size: 3em;
+  color: #4A4F4F;
+}
+.footer-lower__left .footer-logo__tag {
+  font-family: "Assistant", sans-serif;
+  font-size: 1.8em;
+  font-weight: 400;
+  font-weight: 300;
+  color: #4A4F4F;
+}
+.footer-lower__right {
+  text-align: right;
+  font-family: "Assistant", sans-serif;
+  font-size: 1.5em;
+  font-weight: 300;
+  line-height: 1.6em;
   text-transform: uppercase;
   font-weight: 400;
   font-size: 1.25em;
