--- a/frontend/sass/style.scss
+++ b/frontend/sass/style.scss
@@ -4,5 +4,7 @@
 @import "keyframes";
 @import "testing";
 @import "nav";
+@import "secondary-nav";
 @import "landing";
+@import "artist";
 @import "footer";
