--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -244,42 +244,6 @@ li {
   font-family: "Assistant", sans-serif;
   font-size: 1.5em;
   font-weight: 600;
-.footer {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-}
-.footer-upper {
-  background-image: url("/frontend/img/footer-img.png");
-  background-size: cover;
-  background-position: 0% 35%;
-  padding: 8em;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-}
-.footer-upper__cta {
-  color: #EFEFEB;
-  font-family: "Assistant", sans-serif;
-  font-weight: 600;
-  text-transform: uppercase;
-  font-size: 2.5em;
-  letter-spacing: 0.05em;
-  text-align: center;
-  padding-bottom: 1.5em;
-}
-.footer-upper__btn-container {
-  width: 100%;
-  display: flex;
-  justify-content: center;
-}
-.footer-upper__btn-container .sell-work-btn {
-  justify-self: center;
-  width: fit-content;
-  font-family: "Assistant", sans-serif;
-  font-size: 1.5em;
-  font-weight: 600;
   text-transform: uppercase;
   background-color: #F4794F;
   color: white;
@@ -287,6 +251,32 @@ li {
   border-radius: none;
   padding: 0.75em 2em;
   cursor: pointer;
+}
+
+.card {
+  border: none;
+  background: none;
+}
+.card-body {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  font-family: "Assistant", sans-serif;
+  font-size: 1.5em;
+  font-weight: 300;
+  line-height: 1.6em;
+}
+.card-body p {
+  margin: 0;
+}
+.card-body-top {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+.card-body-bottom {
+  color: #C3C3B7;
+  font-style: italic;
 }
 
 .landing__hero {
@@ -321,9 +311,13 @@ li {
 }
 .landing__hero .landing__intro-header {
   margin-right: 38%;
+  font-family: "Cremona", sans-serif;
+  font-size: 3.75em;
+  font-weight: 400;
 }
 .landing__hero .landing__intro-heading {
   color: #EFEFEB;
+  font-size: 5rem;
 }
 .landing__hero .landing__intro-rotate {
   display: inline;
@@ -385,6 +379,7 @@ li {
   font-family: "Assistant", sans-serif;
   font-size: 1.5em;
   font-weight: 600;
+  text-transform: uppercase;
   background-color: #F4794F;
   color: white;
   border: none;
@@ -392,6 +387,196 @@ li {
   padding: 0.75em 2em;
   cursor: pointer;
   color: #EFEFEB;
+}
+.landing__hero .landing__intro-btn-alt {
+  font-family: "Assistant", sans-serif;
+  font-size: 1.5em;
+  font-weight: 300;
+  line-height: 1.6em;
+  color: #D5E0A8;
+}
+
+.landing__background {
+  width: 100%;
+  height: 130vh;
+  position: absolute;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+.landing__background-img:nth-child(1) {
+  position: relative;
+  top: 10em;
+}
+.landing__background-img:nth-child(2) {
+  position: relative;
+  z-index: 20;
+}
+
+.landing__body {
+  height: 140vh;
+  width: 100%;
+}
+
+.landing__content {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  height: 70vh;
+  width: 100%;
+  position: relative;
+  z-index: 499;
+}
+.landing__content-images {
+  flex-basis: 50%;
+  display: flex;
+  flex-direction: row;
+  padding-left: 10vw;
+}
+.landing__content-image {
+  height: 35em;
+  width: 35em;
+  position: relative;
+  top: 15vh;
+}
+.landing__content-image:nth-child(1) {
+  background: url("../img/landing-img-1.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+.landing__content-image:nth-child(2) {
+  background: url("../img/landing-img-2.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  margin-left: 3em;
+}
+.landing__content-text {
+  flex-basis: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  gap: 4em;
+  padding-right: 10%;
+  padding-left: 3%;
+}
+.landing__content-textbox {
+  display: flex;
+  flex-direction: row;
+  gap: 2em;
+}
+.landing__content-img {
+  height: 10%;
+  width: auto;
+}
+.landing__content-heading {
+  font-family: "Cremona", sans-serif;
+  font-size: 3.75em;
+  font-weight: 400;
+  flex-basis: 25%;
+}
+.landing__content-body {
+  font-family: "Assistant", sans-serif;
+  font-size: 1.5em;
+  font-weight: 300;
+  line-height: 1.6em;
+}
+
+.landing__products {
+  height: 80vh;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 2em;
+  padding-left: 10vw;
+  position: relative;
+  z-index: 600;
+}
+.landing__products-cards {
+  width: 100%;
+  overflow-x: scroll;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  gap: 4em;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+.landing__products-cards::-webkit-scrollbar {
+  display: none;
+}
+.landing__products-card {
+  margin: 2em;
+}
+.landing__products-card-img {
+  height: 100%;
+  width: auto;
+}
+.landing__products-cont {
+  width: 100%;
+  padding-right: 10vw;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  gap: 2em;
+}
+.landing__products-btn {
+  font-family: "Assistant", sans-serif;
+  font-size: 1.5em;
+  font-weight: 600;
+  text-transform: uppercase;
+  color: #F4794F;
+  background-color: transparent;
+  border: none;
+  border-bottom: 2px #F4794F solid;
+  cursor: pointer;
+}
+
+.footer {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  position: relative;
+  z-index: 1000;
+}
+.footer-upper {
+  background-image: url("/frontend/img/footer-img.png");
+  background-size: cover;
+  background-position: 0% 35%;
+  padding: 8em;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.footer-upper__cta {
+  color: #EFEFEB;
+  font-family: "Assistant", sans-serif;
+  font-weight: 600;
+  text-transform: uppercase;
+  font-size: 2.5em;
+  letter-spacing: 0.05em;
+  text-align: center;
+  padding-bottom: 1.5em;
+}
+.footer-upper__btn-container {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+.footer-upper__btn-container .sell-work-btn {
+  justify-self: center;
+  width: fit-content;
+  font-family: "Assistant", sans-serif;
+  font-size: 1.5em;
+  font-weight: 600;
+  text-transform: uppercase;
+  background-color: #F4794F;
+  color: white;
+  border: none;
+  border-radius: none;
+  padding: 0.75em 2em;
+  cursor: pointer;
 }
 .footer-lower {
   display: flex;
@@ -420,54 +605,6 @@ li {
   font-size: 1.5em;
   font-weight: 300;
   line-height: 1.6em;
-  color: #D5E0A8;
-}
-
-.landing__background {
-  width: 100%;
-  height: 130vh;
-  position: absolute;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-}
-.landing__background-img:nth-child(2) {
-  position: relative;
-  z-index: 20;
-}
-
-.landing__body {
-  height: 130vh;
-  width: 100%;
-}
-
-.landing__content {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  height: 70vh;
-  width: 100%;
-}
-.landing__content-images {
-  flex-basis: 50%;
-  display: flex;
-  flex-direction: row;
-}
-.landing__content-text {
-  flex-basis: 50%;
-  display: flex;
-  flex-direction: column;
-}
-.landing__content-img {
-  height: 10%;
-  width: auto;
-}
-.landing__content-heading {
-  font-family: "Cremona", sans-serif;
-  font-size: 3.75em;
-  font-weight: 400;
-}
-.landing__content-body {
   text-transform: uppercase;
   font-weight: 400;
   font-size: 1.25em;
