--- a/frontend/sass/_footer.scss
+++ b/frontend/sass/_footer.scss
@@ -3,6 +3,8 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    position: relative;
+    z-index: 1000;
 
 
     &-upper{
