--- a/frontend/sass/_artist.scss
+++ b/frontend/sass/_artist.scss
@@ -12,13 +12,53 @@
         z-index: 100;
         overflow: hidden;
 
-        &__right{
-            width: 45vw;
+
+        .page-heading{
+            height: 100%;
+            width: 100%;
+            left: 3vw;
             position: absolute;
-            left: 78vw;
-            top: -22.5vw;
             overflow: hidden;
+
+            .artist-background__right{
+                width: 43vw;
+                position: absolute;
+                right: -25vw;
+                top: -26vw;
+                overflow: hidden;
+                transform: rotate(-9.32deg);
+            }
+
+            .svg-curve{
+                width: 35vw;
+                height: auto;
+                position: absolute;
+                top: 8.5vw;
+                right: -11.5vw;
+
+            }
+
+            path {
+                fill: transparent;
+                width: 10vw; 
+                height: auto;
+            }
+
+            // .curve{
+          
+            // }
+
+            textPath{                
+                @include title;
+                font-size: 3em;
+                letter-spacing: .15em;
+                white-space: nowrap;
+                fill: $darkgrey;
+
+             
+            }
         }
+        
 
         &__left{
             height: fit-content;
@@ -43,34 +83,28 @@
        }
 
         .top-left__left{
+            width: 15vw;
             min-height: 13vw;
             display: flex;
             flex-direction: column;
-            // justify-content: space-between;
-            padding-right: 3em;
           
 
             .artist-img{
                 width: 10vw;
-                padding-bottom: 2em;
+                padding-bottom: 5em;
+            }
+            
+            .fa-circle{
+                color: $orange;
             }
 
-            .socials{
-                display: flex;
-                color: white;
-                // justify-content: space-between;
-
-                &-container{
-                    font-size: 1.75em;
-                    margin-right: 1.25em;
-                    background-color: $orange;
-                    line-height: 2.2em;
-                    width: 2.2em;
-                    border-radius: 2em;
-                    text-align: center;
-                    cursor: pointer;
-                }
-            }
+            .fa-stack{
+                cursor: pointer;
+                padding: 0;
+                padding-right: 3vw;
+                text-align: left;
+            }            
+            
         }
 
         .top-left__right{
@@ -85,10 +119,23 @@
             .edit-profile-btn{
                 background: transparent;
                 border: none;
-                font-size: 2.5em;
-                padding-bottom: 2em;
-                color: $darkgrey;
+                font-size: 1em;
+                padding-bottom: 6em;
+                color: $green;
                 width: fit-content;
+                cursor: pointer;
+                
+                :hover{
+                    color: $orange;
+
+                    .fa-pen-to-square{
+                        color: $white;
+                    }
+                }
+
+                .fa-pen-to-square{
+                    color: $darkgrey;
+                }
             }
 
             .artist-name{
@@ -105,38 +152,65 @@
 
         }
 
-        .top-right{
-            width: 20%;
-          
-            
-            .svg-curve{
-                width: 34%;
-                height: auto;
-                position: absolute;
-                top: -5.8vw;
-                left: 74.5vw;
+    
+        .artist-profile__bottom{
+            margin-top: 7em;
+            width: 100%;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            gap: 2em;
+            position: relative;
+            z-index: 600;
 
+            .artist-products{
+                width: fit-content;
+                overflow-x: scroll;
+                display: flex;
+                flex-direction: row;
+                flex-wrap: nowrap;
+                gap: 4em;
+                -ms-overflow-style: none; 
+                scrollbar-width: none;
             }
 
-            path {
-                fill: transparent;
-                width: 180%; 
-                height: auto;
+            .artist-products::-webkit-scrollbar{
+                display: none;
             }
 
-            // .curve{
-          
-            // }
+            .card{
 
-            textPath{
-                
-                @include title;
-                font-size: 3.2em;
-                letter-spacing: .15em;
-                color: $darkgrey;
-                white-space: nowrap;
+                .edit-btns{
+                    width: 100%;
+                    padding: 2em;
+                    display: flex;
+                    flex-direction: column;
+                    align-items: flex-end;
+                    position: absolute;
+                }
+
+                .fa-stack{
+                    cursor: pointer;
+                    margin-bottom: .5em;
+
+                    .fa-circle{
+                        color: $green;
+                    }
+
+                    .circle-trash{
+                        color: $orange;
+                    }
+
+                    .fa-pen-to-square{
+                        color: $darkgrey;
+
+                    }
+                }      
+
+                    
             }
         }
+       
     }
 }
 
