--- a/frontend/sass/_secondary-nav.scss
+++ b/frontend/sass/_secondary-nav.scss
@@ -1,8 +1,9 @@
 .secondary-nav{
     width: 100%;
-    height: 30vh;
+    height: 15vw;
     display: flex;
     flex-direction: row;
+    justify-content: spa;
     text-transform: uppercase;
     position: relative;
     z-index: 5000;
@@ -12,12 +13,17 @@
         z-index: 51;
 
         .secondary-nav-logo{
-            width: 20vw;
+            width: 17vw;
         }
     }
 
+    a{
+        color: $darkgrey;
+        text-decoration: none;
+    }
+
     &__navigation{
-        flex-basis: 75%;
+        flex-basis: 68vw;
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -40,21 +46,24 @@
         align-items: center;
         align-content: center;
         justify-content: space-between;
-        margin-right: 10vw;
+  
     }
 
     &__ul{
+        width: 100%;
         display: flex;
         flex-direction: row;
         align-items: center;
-        gap: 9em;
+        justify-content: space-between;
+        // gap: 9em;/
         color: $darkgrey;
+        padding-right: 15vw;
     }
 
     &-li{
         font-family: $contentfont;
-        font-size: 1.6em;
-        font-weight: 400;
+        font-size: 1.8em;
+        font-weight: 500;
     }
 
     &-li:hover{
@@ -63,13 +72,18 @@
 
     &-back{
         @include button-text;
+        font-size: 1.8em;
     }
 
     &__btn{
+        width: fit-content;
         display: flex;
+        justify-content: flex-end;
         flex-direction: row;
         gap: 3em;
-        align-items: center
+        align-items: center;
+        white-space: nowrap;
+        // padding-right: 10vw;
     }
 
     &__back{
@@ -87,5 +101,6 @@
 
     &-btn{
         @include button-orange;
+        font-size: 1.8em;
     }
 }
