artist page desktop layout

--- a/frontend/sass/_footer.scss
+++ b/frontend/sass/_footer.scss
@@ -9,7 +9,7 @@
 
     &-upper{
         background-image: url("/frontend/img/footer-img.png");
-        background-size: cover;
+        background-size: 120%;
         background-position: 0% 35%;
         padding: 8em;
         display: flex;
