--- a/frontend/sass/_resets.scss
+++ b/frontend/sass/_resets.scss
@@ -5,6 +5,17 @@
     text-decoration: none;
 }
 
+// Overflow Testing Starts
+
+// * {
+//     background: #000 !important;
+//     color: #0f0 !important;
+//     outline: solid #f00 1px !important;
+// }
+
+// Overflow Testing Ends
+
+
 html{
     font-size: 62.5%;
 }
