--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -171,11 +171,14 @@ li {
   text-transform: uppercase;
 }
 .nav__logo {
-  flex-basis: 30%;
+  flex-basis: 39.5%;
   z-index: 51;
 }
+.nav-logo {
+  width: 20vw;
+}
 .nav__navigation {
-  flex-basis: 70%;
+  flex-basis: 60.5%;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -204,6 +207,7 @@ li {
   align-items: center;
   gap: 9em;
   color: #fff;
+  margin-bottom: 0;
 }
 .nav-li {
   font-family: "Assistant", sans-serif;
@@ -235,6 +239,7 @@ li {
   flex-direction: row;
   gap: 3em;
   align-items: center;
+  display: none;
 }
 .nav-fa-landing {
   color: #F4794F;
@@ -253,6 +258,14 @@ li {
   cursor: pointer;
 }
 
+@media screen and (min-width: 1201px) and (max-width: 1500px) {
+  .nav__logo {
+    flex-basis: 37%;
+  }
+  .nav__navigation {
+    flex-basis: 63%;
+  }
+}
 .card {
   border: none;
   background: none;
@@ -404,9 +417,22 @@ li {
   flex-direction: row;
   justify-content: space-between;
 }
+.landing__background-box {
+  flex-basis: 40%;
+}
+.landing__background-box:nth-child(1) {
+  position: relative;
+  top: 15vh;
+}
+.landing__background-img {
+  width: 100%;
+  height: auto;
+}
+.landing__background-box:nth-child(2) {
+  text-align: right;
+}
 .landing__background-img:nth-child(1) {
   position: relative;
-  top: 10em;
 }
 .landing__background-img:nth-child(2) {
   position: relative;
@@ -434,20 +460,16 @@ li {
   padding-left: 10vw;
 }
 .landing__content-image {
-  height: 35em;
-  width: 35em;
+  width: 20vw;
+  height: auto;
   position: relative;
   top: 15vh;
 }
-.landing__content-image:nth-child(1) {
-  background: url("../img/landing-img-1.png");
-  background-size: cover;
-  background-repeat: no-repeat;
+.landing__content-img {
+  width: 100%;
+  height: auto;
 }
 .landing__content-image:nth-child(2) {
-  background: url("../img/landing-img-2.png");
-  background-size: cover;
-  background-repeat: no-repeat;
   margin-left: 3em;
 }
 .landing__content-text {
@@ -463,10 +485,6 @@ li {
   display: flex;
   flex-direction: row;
   gap: 2em;
-}
-.landing__content-img {
-  height: 10%;
-  width: auto;
 }
 .landing__content-heading {
   font-family: "Cremona", sans-serif;
@@ -532,6 +550,59 @@ li {
   cursor: pointer;
 }
 
+@media screen and (min-width: 1201px) and (max-width: 1500px) {
+  .landing__body {
+    height: 160vh;
+  }
+
+  .landing__content {
+    height: 80vh;
+  }
+  .landing__content-body {
+    font-size: 1.3em;
+  }
+}
+@media screen and (min-width: 1025px) and (max-width: 1200px) {
+  .landing__body {
+    height: 200vh;
+  }
+
+  .landing__content {
+    height: 110vh;
+  }
+  .landing__content-body {
+    font-size: 1.3em;
+  }
+}
+@media screen and (min-width: 1500px) {
+  .landing__content-img {
+    width: 90%;
+    height: auto;
+  }
+  .landing__content-body {
+    font-size: 1.7em;
+  }
+}
+@media screen and (min-width: 769px) and (max-width: 1024px) {
+  .landing__body {
+    height: 100vh;
+  }
+
+  .landing__content {
+    height: 110vh;
+  }
+  .landing__content-text {
+    justify-content: center;
+  }
+  .landing__content-body {
+    font-size: 1.3em;
+  }
+}
+.btn {
+  position: relative;
+  z-index: 9999;
+}
+
 .footer {
   width: 100%;
   display: flex;
@@ -539,131 +610,6 @@ li {
   justify-content: center;
   position: relative;
   z-index: 1000;
-}
-.footer-upper {
-  background-image: url("/frontend/img/footer-img.png");
-  background-size: cover;
-  background-position: 0% 35%;
-  padding: 8em;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-}
-.footer-upper__cta {
-  color: #EFEFEB;
-  font-family: "Assistant", sans-serif;
-  font-weight: 600;
-  text-transform: uppercase;
-  font-size: 2.5em;
-  letter-spacing: 0.05em;
-  text-align: center;
-  padding-bottom: 1.5em;
-}
-.footer-upper__btn-container {
-  width: 100%;
-  display: flex;
-  justify-content: center;
-}
-.footer-upper__btn-container .sell-work-btn {
-  justify-self: center;
-  width: fit-content;
-  font-family: "Assistant", sans-serif;
-  font-size: 1.5em;
-  font-weight: 600;
-  text-transform: uppercase;
-  background-color: #F4794F;
-  color: white;
-  border: none;
-  border-radius: none;
-  padding: 0.75em 2em;
-  cursor: pointer;
-}
-.footer-lower {
-  display: flex;
-  justify-content: space-between;
-  padding: 5em 8em;
-  background-color: #EFEFEB;
-  border-bottom: solid 1px #C3C3B7;
-}
-.footer-lower__left .footer-logo__display {
-  font-family: "Cremona", sans-serif;
-  font-size: 3.75em;
-  font-weight: 400;
-  font-size: 3em;
-  color: #4A4F4F;
-}
-.footer-lower__left .footer-logo__tag {
-  font-family: "Assistant", sans-serif;
-  font-size: 1.8em;
-  font-weight: 400;
-  font-weight: 300;
-  color: #4A4F4F;
-}
-.footer-lower__right {
-  text-align: right;
-  font-family: "Assistant", sans-serif;
-  font-size: 1.5em;
-  font-weight: 300;
-  line-height: 1.6em;
-  color: #D5E0A8;
-}
-
-.landing__background {
-  width: 100%;
-  height: 130vh;
-  position: absolute;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-}
-.landing__background-img:nth-child(2) {
-  position: relative;
-  z-index: 20;
-}
-
-.landing__body {
-  height: 130vh;
-  width: 100%;
-}
-
-.landing__content {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  height: 70vh;
-  width: 100%;
-}
-.landing__content-images {
-  flex-basis: 50%;
-  display: flex;
-  flex-direction: row;
-}
-.landing__content-text {
-  flex-basis: 50%;
-  display: flex;
-  flex-direction: column;
-}
-.landing__content-img {
-  height: 10%;
-  width: auto;
-}
-.landing__content-heading {
-  font-family: "Cremona", sans-serif;
-  font-size: 3.75em;
-  font-weight: 400;
-}
-.landing__content-body {
-  font-family: "Assistant", sans-serif;
-  font-size: 1.5em;
-  font-weight: 300;
-  line-height: 1.6em;
-}
-
-.footer {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
 }
 .footer-upper {
   background-image: url("/frontend/img/footer-img.png");
@@ -766,4 +712,342 @@ li {
   border-radius: 2em;
   text-align: center;
   cursor: pointer;
+}
+
+.modal__background {
+  background: url("../img/form-background-crop.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+.modal-body {
+  display: flex;
+  flex-direction: column;
+  gap: 3em;
+}
+.modal-header {
+  border: none;
+}
+.modal-header > button {
+  padding: 1em !important;
+}
+.modal-heading {
+  font-family: "Assistant", sans-serif;
+  font-size: 2.5em;
+  font-weight: 600;
+  text-transform: uppercase;
+  display: flex;
+  flex-direction: column;
+  gap: 0.5em;
+  font-size: 5rem;
+  text-align: center;
+}
+.modal-header__back {
+  display: flex;
+  flex-direction: row;
+  gap: 2em;
+  font-size: 0.5em;
+  margin-left: 8em;
+}
+.modal-back-btn {
+  font-family: "Assistant", sans-serif;
+  font-size: 1.5em;
+  font-weight: 600;
+  text-transform: uppercase;
+  color: #F4794F;
+  background-color: transparent;
+  border: none;
+  border-bottom: 2px #F4794F solid;
+  cursor: pointer;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+.modal-subtitle {
+  font-size: 2rem;
+}
+
+@media screen and (min-width: 1500px) {
+  .modal-header {
+    font-size: 3rem;
+  }
+  .modal-title {
+    font-size: inherit;
+  }
+  .modal-footer {
+    border: none;
+  }
+}
+.form {
+  display: flex;
+  align-items: center;
+  align-content: center;
+  justify-content: center;
+}
+.form__input {
+  width: 80%;
+  display: flex;
+  flex-direction: column;
+  gap: 0.5em;
+  font-family: "Assistant", sans-serif;
+  font-size: 2.5em;
+  font-weight: 600;
+  text-transform: uppercase;
+}
+.form__input-box {
+  flex-basis: 70%;
+  display: flex;
+  flex-direction: column;
+  gap: 0.5em;
+}
+.form__input-alt {
+  width: 95%;
+}
+.form-text-input {
+  border: none;
+  background: #EFEFEB;
+  padding: 0.5em;
+  width: 100%;
+}
+.form__btns {
+  width: 80%;
+  display: flex;
+  align-items: center;
+  align-content: center;
+  justify-content: center;
+  flex-direction: column;
+  gap: 1em;
+}
+.form-btn {
+  font-family: "Assistant", sans-serif;
+  font-size: 1.5em;
+  font-weight: 600;
+  text-transform: uppercase;
+  background-color: #F4794F;
+  color: white;
+  border: none;
+  border-radius: none;
+  padding: 0.75em 2em;
+  cursor: pointer;
+  width: 100%;
+}
+.form-btn-alt {
+  font-family: "Assistant", sans-serif;
+  font-size: 1.5em;
+  font-weight: 600;
+  text-transform: uppercase;
+  color: #F4794F;
+  background-color: transparent;
+  border: none;
+  border-bottom: 2px #F4794F solid;
+  cursor: pointer;
+  color: #000;
+  border-color: #000;
+}
+.form__divider {
+  border-style: solid;
+  border-width: 1px;
+  width: 80%;
+  border-color: #D5E0A8;
+}
+.form__radio {
+  background: #EFEFEB;
+  height: 4.5vh;
+  width: 10vw;
+  display: flex;
+  align-items: center;
+  align-content: center;
+  justify-content: center;
+}
+.form__radio:hover {
+  background: #D5E0A8;
+  transition: 0.4s ease-in;
+}
+.form-radio {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  position: absolute;
+  color: #000;
+  cursor: pointer;
+  height: 4.5vh;
+  width: 10vw;
+  z-index: 500;
+}
+.form__radio-all {
+  width: 80%;
+  display: flex;
+  flex-direction: column;
+}
+.form__radio-all p {
+  font-family: "Assistant", sans-serif;
+  font-size: 2.5em;
+  font-weight: 600;
+  text-transform: uppercase;
+}
+.form__radio-box {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  gap: 2em;
+}
+.form__footer {
+  margin: 4em;
+}
+.form__image-preview-box {
+  display: flex;
+  flex-direction: row;
+}
+.form__image-preview {
+  background: #F4794F;
+  flex-basis: 30%;
+}
+
+.login {
+  display: flex;
+  align-items: center;
+  align-content: center;
+  justify-content: center;
+  flex-direction: column;
+  width: 100%;
+  gap: 4em;
+}
+.login-signup {
+  font-family: "Assistant", sans-serif;
+  font-size: 1.5em;
+  font-weight: 600;
+  background-color: #D5E0A8;
+  color: #4A4F4F;
+  border: none;
+  border-radius: none;
+  padding: 0.75em 2em;
+  cursor: pointer;
+  margin: 2em;
+}
+
+.signup {
+  display: flex;
+  align-items: center;
+  align-content: center;
+  justify-content: center;
+  flex-direction: column;
+  width: 100%;
+  gap: 4em;
+}
+.signup__store {
+  display: flex;
+  align-items: center;
+  align-content: center;
+  justify-content: center;
+  flex-direction: column;
+  width: 100%;
+  gap: 4em;
+}
+.signup__store-box {
+  width: 80%;
+  display: flex;
+  flex-direction: column;
+  gap: 0.5em;
+  display: flex;
+  flex-direction: row;
+}
+.signup__image-preview {
+  padding: 0em 1em;
+  margin-left: 1em;
+  border: none;
+  background: #D5E0A8;
+}
+
+.delete {
+  display: flex;
+  align-items: center;
+  align-content: center;
+  justify-content: center;
+  flex-direction: column;
+  width: 100%;
+  gap: 4em;
+}
+.delete__btns {
+  display: flex;
+  align-items: center;
+  align-content: center;
+  justify-content: center;
+  flex-direction: row;
+  gap: 2em;
+  width: 100%;
+}
+.delete-btn {
+  font-family: "Assistant", sans-serif;
+  font-size: 1.5em;
+  font-weight: 600;
+  text-transform: uppercase;
+  background-color: #F4794F;
+  color: white;
+  border: none;
+  border-radius: none;
+  padding: 0.75em 2em;
+  cursor: pointer;
+  width: 30%;
+}
+.delete-btn-alt {
+  font-family: "Assistant", sans-serif;
+  font-size: 1.5em;
+  font-weight: 600;
+  background-color: #D5E0A8;
+  color: #4A4F4F;
+  border: none;
+  border-radius: none;
+  padding: 0.75em 2em;
+  cursor: pointer;
+  width: 30%;
+}
+
+.upload {
+  display: flex;
+  flex-direction: column;
+  gap: 3em;
+  margin: 0% 10%;
+}
+.upload__images {
+  display: flex;
+  flex-direction: column;
+}
+.upload__image {
+  display: flex;
+  flex-direction: row;
+  gap: 3%;
+}
+.upload__image-input-box {
+  flex-basis: 30%;
+  display: flex;
+  flex-direction: column;
+}
+.upload__image-box {
+  background: #F4794F;
+  margin-top: 2em;
+  height: 50em;
+}
+.upload__input {
+  width: 100%;
+}
+.upload__listing {
+  display: flex;
+  flex-direction: row;
+}
+.upload__care {
+  display: flex;
+  flex-direction: row;
+}
+.upload__description {
+  display: flex;
+  flex-direction: row;
+}
+.upload__header {
+  flex-basis: 33%;
+}
+.upload__form {
+  flex-basis: 66%;
+}
+.upload__box {
+  display: flex;
+  flex-direction: row;
 }
