--- a/frontend/sass/_nav.scss
+++ b/frontend/sass/_nav.scss
@@ -6,12 +6,16 @@
     text-transform: uppercase;
 
     &__logo{
-        flex-basis: 30%;
+        flex-basis: 39.5%;
         z-index: 51;
     }
 
+    &-logo{
+        width: 20vw;
+    }
+
     &__navigation{
-        flex-basis: 70%;
+        flex-basis: 60.5%;
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -43,6 +47,8 @@
         align-items: center;
         gap: 9em;
         color: $white;
+        margin-bottom: 0;
+        // margin-left: 9vw;
     }
 
     &-li{
@@ -59,11 +65,12 @@
         @include button-text;
     }
 
+
     &__btn{
         display: flex;
         flex-direction: row;
         gap: 3em;
-        align-items: center
+        align-items: center;
     }
 
     &__back{
@@ -71,6 +78,7 @@
         flex-direction: row;
         gap: 3em;
         align-items: center;
+        display: none;
     }
 
 
@@ -81,5 +89,20 @@
 
     &-btn{
         @include button-orange;
+        
+    }
+}
+
+@media screen and (min-width: 1201px) and (max-width:1500px) {
+    
+    .nav{
+
+        &__logo{
+            flex-basis: 37%;
+        }
+        
+        &__navigation{
+            flex-basis: 63%;
+        }
     }
 }
