--- a/frontend/sass/_nav.scss
+++ b/frontend/sass/_nav.scss
@@ -4,6 +4,7 @@
     display: flex;
     flex-direction: row;
     text-transform: uppercase;
+    z-index: 1000;
 
     &__logo{
         flex-basis: 39.5%;
