--- a/frontend/sass/_nav.scss
+++ b/frontend/sass/_nav.scss
@@ -1,9 +1,11 @@
 .nav{
     width: 100%;
     height: 30vh;
+    position: relative;
     display: flex;
     flex-direction: row;
     text-transform: uppercase;
+    z-index: 100;
 
     &__logo{
         flex-basis: 39.5%;
