--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -537,12 +537,42 @@ li {
 .landing__background-box:nth-child(2) {
   text-align: right;
 }
+.landing__background-box:nth-child(2) .svg-curve-two {
+  width: 20vw;
+  height: auto;
+  position: absolute;
+  top: 16vw;
+  right: -6.5vw;
+  overflow: visible;
+}
+.landing__background-box:nth-child(2) path {
+  width: 10vw;
+  height: auto;
+}
+.landing__background-box:nth-child(2) textPath {
+  font-family: "Cremona", sans-serif;
+  font-size: 3.75em;
+  font-weight: 400;
+  font-size: 4em;
+  letter-spacing: 0.15em;
+  white-space: nowrap;
+  fill: #4A4F4F;
+}
 .landing__background-img:nth-child(1) {
   position: relative;
 }
 .landing__background-img:nth-child(2) {
   position: relative;
   z-index: 20;
+}
+.landing__background .bg-img-right {
+  width: 43vw;
+  position: absolute;
+  right: -20vw;
+  top: -28vw;
+  overflow: hidden;
+  transform: rotate(-9.32deg);
+  z-index: 0;
 }
 
 .landing__body {
@@ -586,6 +616,7 @@ li {
   gap: 4em;
   padding-right: 10%;
   padding-left: 3%;
+  margin-top: 20vw;
 }
 .landing__content-textbox {
   display: flex;
