--- a/frontend/sass/_landing.scss
+++ b/frontend/sass/_landing.scss
@@ -133,6 +133,31 @@
 
     &-box:nth-child(2){
         text-align: right;
+
+        .svg-curve-two{
+            width: 20vw;
+            height: auto;
+            position: absolute;
+            top: 16vw;
+            right: -6.5vw;
+            overflow: visible;
+    
+        }
+
+        path {
+            // fill: transparent;
+            width: 10vw; 
+            height: auto;
+        }
+
+        textPath{                
+            @include title;
+            font-size: 4em;
+            letter-spacing: .15em;
+            white-space: nowrap;
+            fill: $darkgrey;
+        }
+
     }
 
     &-img:nth-child(1){
@@ -144,6 +169,17 @@
         z-index: 20;
         // flex-basis: 50%;
     }
+
+    .bg-img-right{
+        width: 43vw;
+        position: absolute;
+        right: -20vw;
+        top: -28vw;
+        overflow: hidden;
+        transform: rotate(-9.32deg);
+        z-index: 0;
+    }
+   
 }
 
 .landing__body{
@@ -202,12 +238,16 @@
         gap: 4em;
         padding-right: 10%;
         padding-left: 3%;
+        margin-top: 20vw;
+        
     }
 
     &-textbox{
+        
         display: flex;
         flex-direction: row;
         gap: 2em;
+ 
     }
 
 
