--- a/frontend/sass/_upload-product.scss
+++ b/frontend/sass/_upload-product.scss
@@ -144,7 +144,9 @@
         @include body-text;
     }
 
-  
+    &__btn {
+        @include button-orange;
+    }
 }
 
 @media screen and (min-width: 1px) and (max-width: 1024px) {
