--- a/frontend/sass/style.scss
+++ b/frontend/sass/style.scss
@@ -10,6 +10,7 @@
 @import "modal";
 @import "forms";
 @import "upload-product";
+@import "update-product";
 @import "artist";
 @import "products";
 @import "footer";
