--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -14,6 +14,26 @@ li {
   cursor: pointer;
 }
 
+a {
+  text-decoration: none;
+  cursor: pointer;
+  color: inherit;
+}
+
+a:hover {
+  color: inherit !important;
+}
+
+a:link {
+  text-decoration: none;
+  color: unset;
+}
+
+a:visited {
+  text-decoration: none;
+  color: unset;
+}
+
 @-webkit-keyframes rotateWord {
   0% {
     opacity: 0;
