--- a/frontend/sass/_landing.scss
+++ b/frontend/sass/_landing.scss
@@ -111,7 +111,7 @@
 
 .landing__background{
     width: 100%;
-    height: 130vh;
+    // height: 130vh;
     position: absolute;
     display: flex;
     flex-direction: row;
@@ -155,12 +155,21 @@
 
 .landing__content{
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: space-around;
-    height: 70vh;
+    // height: 70vh;
+    gap: 10em;
     width: 100%;
     position: relative;
     z-index: 499;
+    height: inherit;
+
+    &-container{
+        display: flex;
+        flex-direction: row;
+        flex-basis: 50%;
+        // height: 100vh;
+    }
     
     &-images{
         flex-basis: 50%;
@@ -223,7 +232,8 @@
 }
 
 .landing__products{
-    height: 80vh;
+    // height: 80vh;
+    
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -234,14 +244,14 @@
     z-index: 600;
 
     &-cards{
-        width: 100%;
-        overflow-x: scroll;
-        display: flex;
+        display: -webkit-inline-box;
+        // display: flex;
         flex-direction: row;
-        flex-wrap: nowrap;
+        width: 100%;
         gap: 4em;
         -ms-overflow-style: none; 
         scrollbar-width: none;
+        overflow-x: scroll;
     }
 
     &-cards::-webkit-scrollbar{
@@ -276,13 +286,13 @@
 @media screen and (min-width: 1201px) and (max-width:1500px) {
 
 
-    .landing__body{
-        height: 160vh;
-    }
+    // .landing__body{
+        // height: 160vh;
+    // }
     
     .landing__content{
         
-        height: 80vh;
+        // height: 80vh;
 
         &-body{
             font-size: 1.3em;
@@ -290,20 +300,72 @@
     }
 }
 
-@media screen and (min-width: 1025px) and (max-width: 1200px) {
-    .landing__body{
-        height: 200vh;
-    }
+@media screen and (min-width: 768px) and (max-width: 1200px) {
+
+    .landing__hero{
+
     
+    .landing__intro h1{
+        font-size: 4rem;
+    }
+
+}
     .landing__content{
         
-        height: 110vh;
 
-        &-body{
-            font-size: 1.3em;
+        &-container{
+            flex-direction: row-reverse;
+            justify-content: center;
+            align-items: self-start;
+        }
+
+        &-images{
+            flex-direction: column;
+            align-items: flex-end;
+            gap: 2em;
+            padding: 0;
+            flex-basis: 40%;
+        }
+
+        &-image{
+            width: 25vw;
+        }
+
+        &-image:nth-child(2){
+            margin: 0;
+        }
+
+        &-text{
+            flex-basis: 50%;
+            justify-content: center;
+            padding: 0;
+            padding-bottom: 10vw;
+        }
+
+        .cards{
+            width: 25vw;
+        }
+
+    }
+}
+
+// Extra Tablet Sizing
+@media screen and (min-width: 768px) and (max-width: 1000px) {
+
+    .landing__body{
+        height: 120vh;
+    }
+
+    .landing__content{
+        height: 120vh;
+
+        &-images{
+            margin-top: 8em;
         }
     }
 }
+
+
 
 // Large Screens
 
@@ -323,23 +385,25 @@
     }
 }
 
-// Tablet
+@media screen and (min-width: 10px) and (max-width: 768px){
 
-@media screen and (min-width: 769px) and (max-width: 1024px){
-    .landing__body{
-        height: 100vh;
-    }
-    
     .landing__content{
-        
-        height: 110vh;
+
+        flex-direction: column;
 
         &-text{
+            flex-basis: 100%;
+            padding: 0;
+            margin: 0% 10%;
             justify-content: center;
         }
 
-        &-body{
-            font-size: 1.3em;
+        &-images{
+            display: none;
+        }
+
+        .cards{
+            width: 25vw;
         }
     }
 }
