--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -772,6 +772,9 @@ a:visited {
   z-index: 9999;
 }
 
+.modal {
+  z-index: 100000;
+}
 .modal__background {
   background: url("../img/form-background-crop.png");
   background-size: cover;
@@ -780,6 +783,7 @@ a:visited {
 .modal-body {
   display: flex;
   flex-direction: column;
+  justify-content: center;
   gap: 3em;
 }
 .modal-header {
@@ -798,6 +802,8 @@ a:visited {
   gap: 0.5em;
   font-size: 5rem;
   text-align: center;
+  align-self: center;
+  width: 80%;
 }
 .modal-header__back {
   display: flex;
@@ -819,11 +825,36 @@ a:visited {
   display: flex;
   flex-direction: row;
   align-items: center;
+  gap: 2em;
+  border: none;
+}
+.modal-back-btn:hover {
+  color: #D5E0A8;
+  border-bottom: 2px #D5E0A8 solid;
+  transform: 0.4s;
+  border: none;
+}
+.modal-back-btn i:hover {
+  color: #D5E0A8;
+  border-bottom: 2px #D5E0A8 solid;
+  transform: 0.4s;
+  border: none;
 }
 .modal-subtitle {
   font-size: 2rem;
 }
 
+@media screen and (min-width: 1500px) {
+  .modal-header {
+    font-size: 3rem;
+  }
+  .modal-title {
+    font-size: inherit;
+  }
+  .modal-footer {
+    border: none;
+  }
+}
 @media screen and (min-width: 1500px) {
   .modal-header {
     font-size: 3rem;
@@ -888,6 +919,10 @@ a:visited {
   cursor: pointer;
   width: 100%;
 }
+.form-btn:hover {
+  background-color: #D5E0A8;
+  transition: 0.4s;
+}
 .form-btn-alt {
   font-family: "Assistant", sans-serif;
   font-size: 1.5em;
@@ -898,8 +933,11 @@ a:visited {
   border: none;
   border-bottom: 2px #F4794F solid;
   cursor: pointer;
-  color: #000;
-  border-color: #000;
+}
+.form-btn-alt:hover {
+  color: #D5E0A8;
+  border-bottom: 2px #D5E0A8 solid;
+  transform: 0.4s;
 }
 .form__divider {
   border-style: solid;
@@ -1605,26 +1643,28 @@ a:visited {
   display: flex;
   flex-wrap: wrap;
   gap: 6.666%;
+  row-gap: 26.664%;
 }
-.products-container .card {
+.products-container .cards {
   width: 20%;
 }
-.products-container .card-img-top {
+.products-container .cards-img {
   border-radius: 0;
   cursor: pointer;
 }
-.products-container .card-img-top:hover {
+.products-container .cards-img:hover {
   outline: solid 8px #D5E0A8;
   outline-offset: -4px;
   outline-style: solid;
+  transition: 0.4s;
 }
 @media (min-width: 769px) and (max-width: 1024px) {
-  .products-container .card {
+  .products-container .cards {
     width: 28.5%;
   }
 }
 @media (min-width: 481px) and (max-width: 768px), (max-width: 480px) {
-  .products-container .card {
+  .products-container .cards {
     width: 44%;
   }
 }
